# agentic-tdd-specify-edition

./: .gitignore  AGENTS.md  AGENTS.off.md  Makefile  PROJECT.md  README.md  TESTING.md  VALIDATION.md  project-instructions.md  pyproject.toml
.specify/memory/: constitution.md
agentic_tdd/: __main__.py  cli.py  config.py
agentic_tdd/agents/: __init__.py  base.py  implementer.py  refactorer.py  supervisor.py  tester.py
agentic_tdd/llm/: prompts.py  provider.py
agentic_tdd/models/: agent.py  config.py  cycle.py  kata.py  runner.py
agentic_tdd/runners/: __init__.py  base.py  rust.py
agentic_tdd/utils/: git.py  logging.py  shell.py
katas/: fizzbuzz-kata.md
specs/001-multi-agent-tdd-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-multi-agent-tdd-cli/checklists/: requirements.md
specs/001-multi-agent-tdd-cli/contracts/: agent_interface.md  language_runner.md
